--- a/docker/virtual-host.conf
+++ b/docker/virtual-host.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     ServerName oleksii-bezpoiasnyi.local
-    ServerAlias www.oleksii-bezpoiasnyi.local
+    ServerAlias www.oleksii-bezpoiasnyi.local oleksii-bezpoiasnyi-second.local www.oleksii-bezpoiasnyi-second.local
     DocumentRoot /var/www/html/pub/
     ServerAdmin admin@example.com
     UseCanonicalName Off
@@ -13,7 +13,7 @@
 
 <VirtualHost *:443>
     ServerName oleksii-bezpoiasnyi.local
-    ServerAlias www.oleksii-bezpoiasnyi.local
+    ServerAlias www.oleksii-bezpoiasnyi.local oleksii-bezpoiasnyi-second.local www.oleksii-bezpoiasnyi-second.local
     DocumentRoot /var/www/html/pub/
     ServerAdmin admin@example.com
     UseCanonicalName Off
@@ -24,8 +24,8 @@
     </Directory>
     <IfModule ssl_module>
         SSLEngine on
-        SSLCertificateFile /certs/oleksii-bezpoiasnyi.local+1.pem
-        SSLCertificateKeyFile /certs/oleksii-bezpoiasnyi.local+1-key.pem
+        SSLCertificateFile /certs/oleksii-bezpoiasnyi.local+3.pem
+        SSLCertificateKeyFile /certs/oleksii-bezpoiasnyi.local+3-key.pem
         SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
     </IfModule>
 </VirtualHost>
