#7 Hotfix: configured .htaccess for second website

--- a/.htaccess
+++ b/.htaccess
@@ -120,12 +120,19 @@
     Options +FollowSymLinks
     RewriteEngine on
 
+    #Development
+    SetEnvIf Host .*oleksii-bezpoiasnyi-dev.local.* MAGE_RUN_CODE=base
+    SetEnvIf Host .*oleksii-bezpoiasnyi-dev.local.* MAGE_RUN_TYPE=website
+
+    SetEnvIf Host .*oleksii-bezpoiasnyi-second-dev.local.* MAGE_RUN_CODE=second_website
+    SetEnvIf Host .*oleksii-bezpoiasnyi-second-dev.local.* MAGE_RUN_TYPE=website
+
+    #Production
     SetEnvIf Host .*oleksii-bezpoiasnyi.local.* MAGE_RUN_CODE=base
     SetEnvIf Host .*oleksii-bezpoiasnyi.local.* MAGE_RUN_TYPE=website
 
     SetEnvIf Host .*oleksii-bezpoiasnyi-second.local.* MAGE_RUN_CODE=second_website
     SetEnvIf Host .*oleksii-bezpoiasnyi-second.local.* MAGE_RUN_TYPE=website
-
 
 ############################################
 ## you can put here your magento root folder
